# cc-prof

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCS.md  IMPROVEMENTS.md  LICENSE  README.md
.claude/: settings.local.json
src/: commands.rs  components.rs  doctor.rs  fs_utils.rs  lib.rs  main.rs  paths.rs  profiles.rs  state.rs  switch.rs  test_utils.rs  ui.rs
