[package]
name        = "ccprof"
version     = "0.2.0"
edition     = "2024"
description = "Claude Code Profile Switcher - manage multiple user settings profiles"
authors     = ["HexSleeves <lecoqjacob@gmail.com>"]
license     = "MIT"

[[bin]]
name = "ccprof"
path = "src/main.rs"

[lib]
name = "ccprof"
path = "src/lib.rs"

[dependencies]
anyhow        = "1.0"
anstream      = "0.6"
anstyle       = "1.0"
comfy-table   = "7"
indicatif     = "0.18"
inquire       = "0.9"
clap          = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
chrono        = { version = "0.4", features = ["serde"] }
directories   = "6.0"
fs2           = "0.4"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"

[dev-dependencies]
tempfile    = "3.24"
serial_test = "3.0"
